--- a/project5.html
+++ b/project5.html
@@ -764,7 +764,7 @@
             <img src="images5/class1.png" alt="taj.jpg">
         </div>
         <div class="image-container">
-            <img src="images5/partbclass2.png" alt="taj.jpg">
+            <img src="images5/class2.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
