--- a/project5.html
+++ b/project5.html
@@ -718,7 +718,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-    <p> In the training, I train the model for sigma = 0.5. Let's test how well it will perform for other sigma values that it wasn’t exactly trained for:</p>
+    <p> In the training, I train the model for sigma = 0.5. Here is how the model performs for other sigma values that it wasn’t exactly trained for:</p>
         <div class="image-gr">
         <div class="image-container">
             <img src="images5/ima3.png" alt="taj.jpg">
