--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
     <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
     <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
+    <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
 </body>
 </html>
