--- a/project6.html
+++ b/project6.html
@@ -1,1 +1,282 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+        });
+    </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        h1 {
+            border-bottom: 2px solid #2c3e50;
+            padding-bottom: 10px;
+        }
+        .project-overview {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+        .image-grrid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+        .image-grrid img {
+    width: 40%;
+    height: 40%;
+    object-fit: contain; 
+}
 
+        .image-griddd {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+                .image-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+                .image-container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 3px;
+        }
+        .image {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .image-gri {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+        .image-gr {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+            justify-items: center; 
+            align-items: center; 
+        }
+        .image-g {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+        .image-gi {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+        .image-container {
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .image-subtitle {
+            margin-top: 8px;
+            font-style: italic;
+            font-size: 0.9em;
+            color: #555;
+        }
+        .clear-float {
+            clear: both;
+            width: 100%;
+        }
+        .image-description {
+            margin-top: 8px;
+            font-style: italic;
+            font-size: 0.9em;
+            color: #555;
+        }
+                
+        .equation {
+            margin: 20px 0;
+            overflow-x: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>Project 5: Fun With Diffusion Models!</h1>
+    <h2>Alp Eren Ozdarendeli</h2>
+
+    <div class="Background">
+        <h1>Part A</h2>
+    </div>
+    
+    <div class="project-overview">
+        <h2>Part 0: Setup</h2>
+            <p>  For the setup part, I use DeepFloyd IF as the diffusion model. For Part A, I used the seed 180. Deepfloyd is a two-stage model. In the first stage, 64 x 64 images are produced and second stage takes these images and produces final images of size 256 x 256. To test the setup, I used the given prompts to generate the following outputs: </p>
+        <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/parta1_1.png" alt="taj.jpg">
+                <p class="image-subtitle"> a man wearing a hat</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/parta1_4.png" alt="taj.jpg">
+                <p class="image-subtitle">an oil painting of a snowy mountain village</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/parta1_5.png" alt="taj.jpg">
+                <p class="image-subtitle"> a rocket ship</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+            <p> The generated images actually represent the prompts pretty well. To test the effect of num_inference_steps on the outputs, I test the prompt 'an oil painting of a snowy mountain village' with num_inference_steps 7 and 46 in addition to 20 given above. Here are outputs with num_inference_steps 7 and 46 respectively:</p>
+            <div class="image-gri">
+            <div class="image-container">
+                <img src="images5/parta1_2.png" alt="taj.jpg">
+                <p class="image-subtitle"> an oil painting of a snowy mountain village (num_inference_steps = 7)</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/parta1_3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">an oil painting of a snowy mountain village (num_inference_steps = 46)</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+        <p>With increasing num_inference_steps, the images become more detailed and better reflect the prompts.</p>
+        <h2>1.1 Implementing the Forward Process</h2>
+        <p>Now, I implement the forward process. For the forward process, given a clean image, I get a noisy image for a timestep t by sampling noise from a Gaussian. In addition to these, I also scale the image. The original Campanile image is shown below at different noise levels. Larger t represents larger noise.</p>
+        <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/noise1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+        <h2>1.2 Classical Denoising</h2>
+<p>In this section, I use classical denoising to denoise the noisy images produced in the previous part. For classical denoising, I take a noisy image and try to denoise it by Gaussian filtering. Here are the results for different timestamps:</p>
+        <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/noise1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+                        <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/cdns1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Classical Denoised Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/cdns2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Classical Denoised Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/cdns.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Classical Denoised Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+    <h2>1.3 One-Step Denoising</h2>
+    <p> For one-step denoising, I use a pretrained denoiser stage_1.unet to find the noise in the images. This UNet is already trained on a very large dataset but it was trained text conditioning so I use the embedding of the given prompt "a high quality photo” for conditioning. Then, I remove this image to recover a clean image for noisy images produced in part 1.1:</p>
+                <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/noise1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/noise3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">Noisy Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+                    <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/odn1.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">One-Step Denoised Campanile at t=250</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/odn2.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">One-Step Denoised Campanile at t=500</p>
+            </div>
+                        <div class="image-container">
+                <img src="images5/odn3.png" alt="taj_sharp.jpg">
+                <p class="image-subtitle">One-Step Denoised Campanile at t=750</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+    <h2> 1. 4 Iterative Denoising</h2>
+    <p> In the previous part, performance gets worse with more noisy images. To combat this, I will implement iterative denoising. For iterative denoising, I create a new list of timesteps,strided_timesteps, to skip some steps. The stride of steps will be 30. I add noise to the test image at timestep[10] and run the implemented iterative_denoise function on this image with i_start algorithm being 10. In the following, denoised image is displayed at every fifth step and final clean image prediction is shown in comparison to other techniques:<p>
+                    <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/f1.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f2.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f3.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f4.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f5.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f6.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f7.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f8.png" alt="taj_sharp.jpg">
+            </div>
+                        <div class="image-container">
+                <img src="images5/f9.png" alt="taj_sharp.jpg">
+            </div>
+            <div class="image-container">
+                <img src="images5/campanile.png" alt="taj_sharp.jpg">
+            </div>
+        </div>
+        <div class="clear-float"></div>
