--- a/project6.html
+++ b/project6.html
@@ -130,8 +130,38 @@
     <h2>Alp Eren Ozdarendeli</h2>    
     <div class="project-overview">
         <h2>Part 1: Fit a Neural Field to a 2D Image</h2>
-            <p> In this section, I implement Neural Radiance Field in 2 dimensions. In 2 dimensions, we don't have the concept of radiance so essentially Neural Radiance Field in 2 dimensions reduces to Neural Field, in which we represent 2D by mapping (u,v) to (R,G,B) - converting the pixel coordinate to RGB values. For this, I created Multilayer Perceptron and Sinusoidal Positional Encoding with given architecture. Also, I created a dataloader that that randomly samples certain number of pixels from the image at each iteration. To determine the correct hyperparameters, I have explored different values for learning rate and max frequency L for the given image:</p>
-            <p>Here are my results for the given image, sampled at every 400 iterations:</p>
+            <p> In this section, I implement Neural Radiance Field in 2 dimensions. In 2 dimensions, we don't have the concept of radiance so essentially Neural Radiance Field in 2 dimensions reduces to Neural Field, in which we represent 2D by mapping (u,v) to (R,G,B) - converting the pixel coordinate to RGB values. For this, I created Multilayer Perceptron and Sinusoidal Positional Encoding with given architecture. For Multilayer Perceptron, I used 4 hidden layers(size 256) with RELU and a linear layer(size) with sigmoid. Also, I created a dataloader that  randomly samples certain number of pixels from the image at each iteration. To determine the correct hyperparameters, I have explored different values for learning rate and max frequency L for the given image.  As the baseline, I used the hyperparameters layers=4, hidden dim=256, L=10, LR=1e-2. Firstly, I explored the effect of learning rate. Here are my results for the  baseline, LR=1e-1, LR=1e-3: </p>
+                    <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/baselinecurve.png" alt="taj.jpg">
+                <p class="image-subtitle"> Baseline</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/lr0.1.png" alt="taj.jpg">
+                <p class="image-subtitle">Learning Rate = 0.1</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/lr0.001.png" alt="taj.jpg">
+                <p class="image-subtitle">Learning Rate = 0.001</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
+        <p> As another hyperparameter, I varied the max frequency L. Here are my results for the  baseline, L=5, L=20:
+                            <div class="image-grid">
+            <div class="image-container">
+                <img src="images5/baselinecurve.png" alt="taj.jpg">
+                <p class="image-subtitle"> Baseline</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/lr0.1.png" alt="taj.jpg">
+                <p class="image-subtitle">L=5</p>
+            </div>
+            <div class="image-container">
+                <img src="images5/lr0.001.png" alt="taj.jpg">
+                <p class="image-subtitle">L=20</p>
+            </div>
+        </div>
+        <p>Here are my results for the given image, sampled at every 400 iterations:</p>
             <p>I also ran my training loop for another image of my choosing. As I only tested for hyperparameters learning rate and maximum frequency, I chose learning rate as maximum frequency as for this training. Here are my results for the image, and my training curve: </p>
         <div class="image-grid">
             <div class="image-container">
