--- a/project6.html
+++ b/project6.html
@@ -133,15 +133,15 @@
             <p> In this section, I implement Neural Radiance Field in 2 dimensions. In 2 dimensions, we don't have the concept of radiance so essentially Neural Radiance Field in 2 dimensions reduces to Neural Field, in which we represent 2D by mapping (u,v) to (R,G,B) - converting the pixel coordinate to RGB values. For this, I created Multilayer Perceptron and Sinusoidal Positional Encoding with given architecture. For Multilayer Perceptron, I used 4 hidden layers(size 256) with RELU and a linear layer(size) with sigmoid. Also, I created a dataloader that  randomly samples certain number of pixels from the image at each iteration. To determine the correct hyperparameters, I have explored different values for learning rate and max frequency L for the given image.  As the baseline, I used the hyperparameters layers=4, hidden dim=256, L=10, LR=1e-2. Firstly, I explored the effect of learning rate. Here are my results for the  baseline, LR=1e-1, LR=1e-3: </p>
                     <div class="image-grid">
             <div class="image-container">
-                <img src="images5/baselinecurve.png" alt="taj.jpg">
+                <img src="projimages5/baselinecurve.png" alt="taj.jpg">
                 <p class="image-subtitle"> Baseline</p>
             </div>
             <div class="image-container">
-                <img src="images5/lr0.1.png" alt="taj.jpg">
+                <img src="projimages5/lr0.1.png" alt="taj.jpg">
                 <p class="image-subtitle">Learning Rate = 0.1</p>
             </div>
             <div class="image-container">
-                <img src="images5/lr0.001.png" alt="taj.jpg">
+                <img src="projimages5/lr0.001.png" alt="taj.jpg">
                 <p class="image-subtitle">Learning Rate = 0.001</p>
             </div>
         </div>
@@ -153,11 +153,11 @@
                 <p class="image-subtitle"> Baseline</p>
             </div>
             <div class="image-container">
-                <img src="images5/lr0.1.png" alt="taj.jpg">
+                <img src="images5/l5.png" alt="taj.jpg">
                 <p class="image-subtitle">L=5</p>
             </div>
             <div class="image-container">
-                <img src="images5/lr0.001.png" alt="taj.jpg">
+                <img src="images5/l20.png" alt="taj.jpg">
                 <p class="image-subtitle">L=20</p>
             </div>
         </div>
