--- a/project6.html
+++ b/project6.html
@@ -161,8 +161,9 @@
                 <p class="image-subtitle">L=20</p>
             </div>
         </div>
-        <p>Here are my results for the given image, sampled at every 400 iterations:</p>
-            <p>I also ran my training loop for another image of my choosing. As I only tested for hyperparameters learning rate and maximum frequency, I chose learning rate as maximum frequency as for this training. Here are my results for the image, and my training curve: </p>
+        <p>Here are my results for the given image, sampled at every 400 iterations. I trained the model for 2001 iterations. For this training, I used the baseline hyperparameters, layers=4, hidden dim=256, L=10, LR=1e-2:</p>
+        <p> Here is the training curve: </p>
+        <p>I also ran my training loop for another image of my choosing, a crocodile. As I only tested for hyperparameters learning rate and maximum frequency, I chose learning rate as maximum frequency as for this training. Here are my results for the image, and my training curve: </p>
         <div class="image-grid">
             <div class="image-container">
                 <img src="images5/parta1_1.png" alt="taj.jpg">
