--- a/project6.html
+++ b/project6.html
@@ -137,11 +137,11 @@
                 <p class="image-subtitle"> Baseline PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l5.png" alt="taj.jpg">
+                <img src="proj5images/l5_psnrr.png" alt="taj.jpg">
                 <p class="image-subtitle">L=5 PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l20.png" alt="taj.jpg">
+                <img src="proj5images/l20_psnrr.png" alt="taj.jpg">
                 <p class="image-subtitle">L=20 PSNR Curve</p>
             </div>
             <div class="image-container">
