--- a/project6.html
+++ b/project6.html
@@ -137,7 +137,7 @@
                 <p class="image-subtitle"> Baseline PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l5_psnrr.png" alt="taj.jpg">
+                <img src="proj5images/l5_psnrr.png.png" alt="taj.jpg">
                 <p class="image-subtitle">L=5 PSNR Curve</p>
             </div>
             <div class="image-container">
