--- a/project6.html
+++ b/project6.html
@@ -165,24 +165,24 @@
                 <p class="image-subtitle"> Baseline PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l5_psnrr.png.png" alt="taj.jpg">
-                <p class="image-subtitle">L=5 PSNR Curve</p>
+                <img src="proj5images/lr1.png.png" alt="taj.jpg">
+                <p class="image-subtitle">LR= 0.005 PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l20_psnrr.png" alt="taj.jpg">
-                <p class="image-subtitle">L=20 PSNR Curve</p>
+                <img src="proj5images/lr001.png" alt="taj.jpg">
+                <p class="image-subtitle">LR=0.02 PSNR Curve</p>
             </div>
             <div class="image-container">
                 <img src="proj5images/baselinef.png" alt="taj.jpg">
                 <p class="image-subtitle"> Baseline Final Image</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l5f.png" alt="taj.jpg">
-                <p class="image-subtitle">L=5 Final Image</p>
+                <img src="proj5images/lr0.005f.png" alt="taj.jpg">
+                <p class="image-subtitle">LR=0.005 Final Image</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/l20f.png" alt="taj.jpg">
-                <p class="image-subtitle">L=20 Final Image</p>
+                <img src="proj5images/lr2f.png" alt="taj.jpg">
+                <p class="image-subtitle">LR = 0.02Final Image</p>
             </div>
         <div class="clear-float"></div>
         <p>Here are my results for the given image, sampled at every 400 iterations. I trained the model for 2001 iterations. For this training, I used the baseline hyperparameters, layers=4, hidden dim=256, L=10, LR=1e-2:</p>
