--- a/project6.html
+++ b/project6.html
@@ -166,7 +166,7 @@
                 <p class="image-subtitle"> Baseline PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/lr1.png.png" alt="taj.jpg">
+                <img src="proj5images/lr1.png" alt="taj.jpg">
                 <p class="image-subtitle">LR= 0.005 PSNR Curve</p>
             </div>
             <div class="image-container">
@@ -183,11 +183,76 @@
             </div>
             <div class="image-container">
                 <img src="proj5images/lr2f.png" alt="taj.jpg">
-                <p class="image-subtitle">LR = 0.02Final Image</p>
+                <p class="image-subtitle">LR = 0.02 Final Image</p>
             </div>
                     </div>
         <div class="clear-float"></div>
-        <p>Here are my results for the given image, sampled at every 400 iterations. I trained the model for 2001 iterations. For this training, I used the baseline hyperparameters, layers=4, hidden dim=256, L=10, LR=1e-2:</p>
-        <p> Here is the training curve: </p>
-        <p>I also ran my training loop for another image of my choosing, a crocodile. As I only tested for hyperparameters learning rate and maximum frequency, I chose learning rate as maximum frequency as for this training. Here are my results for the image, and my training curve: </p>
+        <p>Here are my results for the given image, sampled at every 400 iterations. I trained the model for 2001 iterations. For this training, I used the following hyperparameters, layers=4, hidden dim=256, L=10, LR=2e-2:</p>
+        <div class="image-grid">
+            <div class="image-container">
+                <img src="proj5images/baseline_psnrr.png" alt="taj.jpg">
+                <p class="image-subtitle"> Training PSNR Curve</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/pr1.png" alt="taj.jpg">
+                <p class="image-subtitle">T=0</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/pr2.png" alt="taj.jpg">
+                <p class="image-subtitle">T=400</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/pr3.png" alt="taj.jpg">
+                <p class="image-subtitle">T=800</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/pr4.png" alt="taj.jpg">
+                <p class="image-subtitle">T=1200</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/pr5.png" alt="taj.jpg">
+                <p class="image-subtitle">T=1600</p>
+            </div>
+                        <div class="image-container">
+                <img src="proj5images/pr6.png" alt="taj.jpg">
+                <p class="image-subtitle">T=2000</p>
+            </div>
+                    </div>
+        <div class="clear-float"></div>
+        <p>I also ran my training loop for another image of my choosing, a crocodile. For this training, I used the following hyperparameters, layers=4, hidden dim=256, L=10, LR=5e-3:. Here are my results for the image, and my training curve: </p>
+                        <div class="image-grid">
+            <div class="image-container">
+                <img src="proj5images/images.jpeg" alt="taj.jpg">
+                <p class="image-subtitle"> Original Image</p>
+            </div>
+                <div class="image-grid">
+            <div class="image-container">
+                <img src="proj5images/crocodile.png" alt="taj.jpg">
+                <p class="image-subtitle"> Training PSNR Curve</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/croc1.png" alt="taj.jpg">
+                <p class="image-subtitle">T=0</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/croc2.png" alt="taj.jpg">
+                <p class="image-subtitle">T=400</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/croc3.png" alt="taj.jpg">
+                <p class="image-subtitle">T=800</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/croc4.png" alt="taj.jpg">
+                <p class="image-subtitle">T=1200</p>
+            </div>
+            <div class="image-container">
+                <img src="proj5images/croc5.png" alt="taj.jpg">
+                <p class="image-subtitle">T=1600</p>
+            </div>
+                        <div class="image-container">
+                <img src="proj5images/pr6.png" alt="taj.jpg">
+                <p class="image-subtitle">T=2000</p>
+            </div>
+                    </div>
 
