--- a/project6.html
+++ b/project6.html
@@ -219,13 +219,12 @@
             </div>
                     </div>
         <div class="clear-float"></div>
-        <p>I also ran my training loop for another image of my choosing, a crocodile. For this training, I used the following hyperparameters, layers=4, hidden dim=256, L=10, LR=5e-3:. Here are my results for the image, and my training curve: </p>
-                        <div class="image-grid">
-            <div class="image-container">
+        <p>I also ran my training loop for another image of my choosing, a crocodile. For this training, I used the following hyperparameters, layers=4, hidden dim=256, L=10, LR=5e-3:. Here are my results for the image, and my training curve: </p>    
+                <div class="image-grid">
+                            <div class="image-container">
                 <img src="proj5images/images.jpeg" alt="taj.jpg">
                 <p class="image-subtitle"> Original Image</p>
             </div>
-                <div class="image-grid">
             <div class="image-container">
                 <img src="proj5images/crocodile.png" alt="taj.jpg">
                 <p class="image-subtitle"> Training PSNR Curve</p>
@@ -251,7 +250,7 @@
                 <p class="image-subtitle">T=1600</p>
             </div>
                         <div class="image-container">
-                <img src="proj5images/pr6.png" alt="taj.jpg">
+                <img src="proj5images/croc6.png" alt="taj.jpg">
                 <p class="image-subtitle">T=2000</p>
             </div>
                     </div>
