--- a/project6.html
+++ b/project6.html
@@ -187,34 +187,34 @@
             </div>
                     </div>
         <div class="clear-float"></div>
-        <p>Here are my results for the given image, sampled at every 400 iterations. I trained the model for 2001 iterations. For this training, I used the following hyperparameters, layers=4, hidden dim=256, L=10, LR=2e-2:</p>
+        <p>Here are my results for the given image, sampled at every 400 iterations. I trained the model for 2001 iterations. For this training, I used the following hyperparameters, layers=4, hidden dim=256, L=10, LR=1e-2:</p>
         <div class="image-grid">
             <div class="image-container">
                 <img src="proj5images/baseline_psnrr.png" alt="taj.jpg">
                 <p class="image-subtitle"> Training PSNR Curve</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/pr1.png" alt="taj.jpg">
+                <img src="proj5images/br1.png" alt="taj.jpg">
                 <p class="image-subtitle">T=0</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/pr2.png" alt="taj.jpg">
+                <img src="proj5images/br2.png" alt="taj.jpg">
                 <p class="image-subtitle">T=400</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/pr3.png" alt="taj.jpg">
+                <img src="proj5images/br3.png" alt="taj.jpg">
                 <p class="image-subtitle">T=800</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/pr4.png" alt="taj.jpg">
+                <img src="proj5images/br4.png" alt="taj.jpg">
                 <p class="image-subtitle">T=1200</p>
             </div>
             <div class="image-container">
-                <img src="proj5images/pr5.png" alt="taj.jpg">
+                <img src="proj5images/br5.png" alt="taj.jpg">
                 <p class="image-subtitle">T=1600</p>
             </div>
                         <div class="image-container">
-                <img src="proj5images/pr6.png" alt="taj.jpg">
+                <img src="proj5images/br6.png" alt="taj.jpg">
                 <p class="image-subtitle">T=2000</p>
             </div>
                     </div>
