--- a/project6.html
+++ b/project6.html
@@ -285,3 +285,12 @@
             </div>
          </div>
         <div class="clear-float"></div>
+                <h2>Part 2.5:  Volume Rendering</h2>
+        <p> In order to obtain render colors, I used the given volume rendering equation, which combined the batches of samples from each ray:</p>
+                                <div class="image-gr">
+            <div class="image-container">
+                <img src="proj5images/volrend.png" alt="taj.jpg">
+            </div>
+         </div>
+        <div class="clear-float"></div>
+        
