--- a/project6.html
+++ b/project6.html
@@ -293,4 +293,6 @@
             </div>
          </div>
         <div class="clear-float"></div>
+        <h2>B&W: Background Coloring</h2>
+        <p>For bells and whistles, I implement the background color. The background color is added to the rendered scene by treating it as the color seen when a ray passes through all objects without being blocked:</p>
         
