--- a/project6.html
+++ b/project6.html
@@ -293,10 +293,18 @@
             </div>
          </div>
         <div class="clear-float"></div>
+        <p>Combining everything together, here is a spherical rendering of lego using the provided camera extrinsics:</p>
+                <div class="image-gr">
+        <div class="image-container">
+            <img src="proj5images/lego.gif" alt="taj.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
         <h2>B&W: Background Coloring</h2>
         <p>For bells and whistles, I implement the background color. The background color is added to the rendered scene by treating it as the color seen when a ray passes through all objects without being blocked:</p>
         <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/legoback_ground.gif" alt="taj.jpg">
+            <img src="proj5images/lego_background.gif" alt="taj.jpg">
         </div>
         </div>
+        <div class="clear-float"></div>
