--- a/project6.html
+++ b/project6.html
@@ -293,6 +293,19 @@
             </div>
          </div>
         <div class="clear-float"></div>
+        <p>Here is the visualized training, predictions shown for each 100 iterations. I used the given hyperparameters, and trained the model for 1000 iterations. Also, I provide the PSNR curve on the validation set (every 10 iterations) and the training set.</p>
+                        <div class="image-gr">
+        <div class="image-container">
+            <img src="proj5images/lego.gif" alt="taj.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
+                        <div class="image-griddd">
+        <div class="image-container">
+            <img src="proj5images/lego.gif" alt="taj.jpg">
+        </div>
+        </div>
+        <div class="clear-float"></div>
         <p>Combining everything together, here is a spherical rendering of lego using the provided camera extrinsics:</p>
                 <div class="image-gr">
         <div class="image-container">
