--- a/project6.html
+++ b/project6.html
@@ -296,13 +296,43 @@
         <p>Here is the visualized training, predictions shown for each 100 iterations. I used the given hyperparameters, and trained the model for 1000 iterations. Also, I provide the PSNR curve on the validation set (every 10 iterations) and the training set.</p>
                         <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/lego.gif" alt="taj.jpg">
+            <img src="proj5images/psnr_nerf.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
                         <div class="image-griddd">
-        <div class="image-container">
-            <img src="proj5images/lego.gif" alt="taj.jpg">
+                                    <div class="image-container">
+            <img src="proj5images/validation_0.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_100.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_200.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_300.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_400.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_500.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_600.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_700.png" alt="taj.jpg">
+        </div>
+                                    <div class="image-container">
+            <img src="proj5images/validation_800.png" alt="taj.jpg">
+        </div>
+                                                                <div class="image-container">
+            <img src="proj5images/validation_900.png" alt="taj.jpg">
+        </div>
+                                                                <div class="image-container">
+            <img src="proj5images/validation_1000.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
