--- a/project6.html
+++ b/project6.html
@@ -300,7 +300,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-                        <div class="image-griddd">
+                        <div class="image-gi">
                                     <div class="image-container">
             <img src="proj5images/validation_0.png" alt="taj.jpg">
         </div>
