--- a/project6.html
+++ b/project6.html
@@ -296,50 +296,50 @@
         <p>Here is the visualized training, predictions shown for each 100 iterations. I used the given hyperparameters, and trained the model for 1000 iterations. Also, I provide the PSNR curve on the validation set (every 10 iterations) and the training set.</p>
                         <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/psnr_nerf.png" alt="taj.jpg">
+            <img src="proj5images/psnr_nerf1.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
                         <div class="image-gi">
                                     <div class="image-container">
-            <img src="proj5images/validation_0.png" alt="taj.jpg">
+            <img src="proj5images/validation_01.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_100.png" alt="taj.jpg">
+            <img src="proj5images/validation_1001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_200.png" alt="taj.jpg">
+            <img src="proj5images/validation_2001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_300.png" alt="taj.jpg">
+            <img src="proj5images/validation_3001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_400.png" alt="taj.jpg">
+            <img src="proj5images/validation_4001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_500.png" alt="taj.jpg">
+            <img src="proj5images/validation_5001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_600.png" alt="taj.jpg">
+            <img src="proj5images/validation_6001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_700.png" alt="taj.jpg">
+            <img src="proj5images/validation_7001.png" alt="taj.jpg">
         </div>
                                     <div class="image-container">
-            <img src="proj5images/validation_800.png" alt="taj.jpg">
+            <img src="proj5images/validation_8001.png" alt="taj.jpg">
         </div>
                                                                 <div class="image-container">
-            <img src="proj5images/validation_900.png" alt="taj.jpg">
+            <img src="proj5images/validation_9001.png" alt="taj.jpg">
         </div>
                                                                 <div class="image-container">
-            <img src="proj5images/validation_1000.png" alt="taj.jpg">
+            <img src="proj5images/validation_990.png" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
         <p>Combining everything together, here is a spherical rendering of lego using the provided camera extrinsics:</p>
                 <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/lego.gif" alt="taj.jpg">
+            <img src="proj5images/lego1.gif" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
@@ -347,7 +347,7 @@
         <p>For bells and whistles, I implement the background color. The background color is added to the rendered scene by treating it as the color seen when a ray passes through all objects without being blocked:</p>
         <div class="image-gr">
         <div class="image-container">
-            <img src="proj5images/lego_background.gif" alt="taj.jpg">
+            <img src="proj5images/lego_background1.gif" alt="taj.jpg">
         </div>
         </div>
         <div class="clear-float"></div>
